--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Rock Paper Scissors: The Odin Project</title>
+</head>
+<body>
+  <button onclick = "">Rock</button>
+  <button onclick= "">Paper</button>
+  <button onclick="">Scissors</button>
 
+
+<script src="java.js"> </script>
+</body>
+</html>
