added activation of PlayerGame function when button is clicked.

--- a/index.html
+++ b/index.html
@@ -6,9 +6,18 @@
   <title>Rock Paper Scissors: The Odin Project</title>
 </head>
 <body>
-  <button onclick = "">Rock</button>
-  <button onclick= "">Paper</button>
-  <button onclick= "">Scissors</button>
+
+  <button onclick = "
+  playGame('rock');
+  ">Rock</button>
+
+  <button onclick= "
+  playGame('paper');
+  ">Paper</button>
+
+  <button onclick= "
+  playGame('scissors');
+  ">Scissors</button>
 
 
 <script src="java.js"> </script>
