--- a/index.html
+++ b/index.html
@@ -7,17 +7,19 @@
 </head>
 <body>
 
-  <button onclick = "
-  playGame('rock');
-  ">Rock</button>
+  <button onclick = "playGame('rock');" class="move-button">
+    <img class="move-icon" src=images/rock-emoji.png>
+  </button>
 
-  <button onclick= "
-  playGame('paper');
-  ">Paper</button>
+  <button onclick= "playGame('paper');"
+  class="move-button">
+    <img class="move-icon" src=images/paper-emoji.png>
+  </button>
 
-  <button onclick= "
-  playGame('scissors');
-  ">Scissors</button>
+  <button onclick= "playGame('scissors');"
+  class="move-button">
+    <img class="move-icon" src=images/scissors-emoji.png>
+  </button>
 
 
 <script src="java.js"> </script>
