--- a/index.html
+++ b/index.html
@@ -6,22 +6,28 @@
   <title>Rock Paper Scissors: The Odin Project</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+  <div class="gameplay-buttons">
+    <button onclick = "playGame('rock');" class="move-button">
+      <img class="move-icon" src=images/rock-emoji.png>
+    </button>
 
-  <button onclick = "playGame('rock');" class="move-button">
-    <img class="move-icon" src=images/rock-emoji.png>
-  </button>
+    <button onclick= "playGame('paper');"
+    class="move-button">
+      <img class="move-icon" src=images/paper-emoji.png>
+    </button>
 
-  <button onclick= "playGame('paper');"
-  class="move-button">
-    <img class="move-icon" src=images/paper-emoji.png>
-  </button>
+    <button onclick= "playGame('scissors');"
+    class="move-button">
+      <img class="move-icon" src=images/scissors-emoji.png>
+    </button>
+  </div>
 
-  <button onclick= "playGame('scissors');"
-  class="move-button">
-    <img class="move-icon" src=images/scissors-emoji.png>
-  </button>
-
+  <div class="scoreboard-area">
+    <div class="scoreboard-title">Scoreboard</div>
+    
+  </div>
 
 <script src="java.js"> </script>
 </body>
