--- a/index.html
+++ b/index.html
@@ -24,9 +24,18 @@
     </button>
   </div>
 
-  <div class="scoreboard-area">
-    <div class="scoreboard-title">Scoreboard</div>
-    
+  <div class="user-computer-boxes">
+    <div class="scoreboard-header">
+      <div class="scoreboard-title">Scoreboard</div>
+    </div>
+    <div class="score-boxes">
+      <div class="user-box">
+        <div class="user-score"></div>
+      </div>
+      <div class="computer-box">
+        <div class="computer-score"></div>
+      </div>
+    </div>
   </div>
 
 <script src="java.js"> </script>
