added new class to scoreboard <p> elements

--- a/index.html
+++ b/index.html
@@ -28,13 +28,12 @@
     <div class="scoreboard-header">
       <div class="scoreboard-title">Scoreboard</div>
     </div>
+
+   <!-- <p class="result js-result"></P> -->
+
     <div class="score-boxes">
-      <div class="user-box">
-        <div class="user-score"></div>
-      </div>
-      <div class="computer-box">
-        <div class="computer-score"></div>
-      </div>
+        <p class="userScore js-userScore user-box">0</p>
+        <p class="compScore  js-compScore computer-box">0</p>
     </div>
   </div>
 
